--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,29 @@
    "version": "0.2.0",
    "configurations": [
       {
-         "name": "(gdb) Launch",
+         "name": "(gdb) Launch Game",
          "type": "cppdbg",
          "request": "launch",
          "program": "${workspaceRoot}/bin/game",
+         "args": [],
+         "stopAtEntry": false,
+         "cwd": "${workspaceRoot}",
+         "environment": [],
+         "externalConsole": false,
+         "MIMode": "gdb",
+         "setupCommands": [
+             {
+                 "description": "Enable pretty-printing for gdb",
+                 "text": "-enable-pretty-printing",
+                 "ignoreFailures": true
+             }
+         ]
+      },
+      {
+         "name": "(gdb) Launch Tests",
+         "type": "cppdbg",
+         "request": "launch",
+         "program": "${workspaceRoot}/bin/tests",
          "args": [],
          "stopAtEntry": false,
          "cwd": "${workspaceRoot}",
